grammar.js
    source_file: ($) =>
      repeat(
        choice(
          // https://www.w3.org/TR/css-color-4/#color-syntax
          $.css_color,

          // https://developer.android.com/reference/android/graphics/Color#encoding
          // https://api.flutter.dev/flutter/dart-ui/Color-class.html
          $.u32_argb,

          $.tailwindcss_color,

          $.xterm_sgr_rgb,

          $._css_hex_color_invalid,
          $._non_symbol,
          $._symbol,
        ),
      ),

    // In preparation for CSS Color Level 5, where CSS color becomes recursive.
    _css_number: (_) => css_number,
    css_number: ($) => $._css_number,

    // https://www.w3.org/TR/css-syntax-3/#percentage-token-diagram
    _css_percentage: (_) => css_percentage,
    css_percentage: ($) => $._css_percentage,

    // https://www.w3.org/TR/css-color-4/#alpha-syntax
    _css_hex_color_invalid: (_) => /#[0-9a-zA-Z]+/,

    // https://www.w3.org/TR/css-color-4/#named-colors
    tailwindcss_color: ($) =>
      choice(
        // https://tailwindcss.com/docs/colors#using-color-utilities
        $.tailwindcss_color_classname_without_alpha,

        // https://tailwindcss.com/docs/colors#adjusting-opacity
        $.tailwindcss_color_classname_with_alpha_percentage,

        // https://tailwindcss.com/docs/colors#adjusting-opacity
        $.tailwindcss_color_classname_with_alpha_arbitrary_value,

        // https://tailwindcss.com/docs/colors#referencing-in-css
        $.tailwindcss_color_css_variable_without_alpha,

        // https://tailwindcss.com/docs/colors#referencing-in-css
        $.tailwindcss_color_css_variable_with_alpha,
      ),

    tailwindcss_color_css_variable_without_alpha: (_) =>
      token(seq("--color-", tailwindcss_color_name)),

    tailwindcss_color_css_variable_with_alpha: ($) =>
      seq(
        "--alpha(",
        "var(",
        field("css_variable", $.tailwindcss_color_css_variable_without_alpha),
        ")",
        "/",
        field("alpha", choice($.css_number, $.css_percentage)),
        ")",
      ),

    _symbol: (_) => symbol,
    _non_symbol: (_) => non_symbol,
